--- a/presentation/src/main/res/xml/preferences.xml
+++ b/presentation/src/main/res/xml/preferences.xml
@@ -22,20 +22,9 @@
         <ListPreference
                 android:key="APP_MODE"
                 android:title="App Style"
-                android:defaultValue="METRIC"/>
-        <!--android:entries="@array/unitSystemEntries"-->
-        <!--android:entryValues="@array/unitSystemValues"/>-->
+                android:defaultValue="light"
+                android:entries="@array/appModeEntries"
+                android:entryValues="@array/appModeValues"/>
     </PreferenceCategory>
-
-    <!--<PreferenceCategory-->
-    <!--android:title="Units">-->
-    <!--<ListPreference-->
-    <!--android:key="UNIT_SYSTEM"-->
-    <!--android:title="Unit system"-->
-    <!--android:summary="%s"-->
-    <!--android:defaultValue="METRIC"-->
-    <!--android:entries="@array/unitSystemEntries"-->
-    <!--android:entryValues="@array/unitSystemValues"/>-->
-    <!--</PreferenceCategory>-->
 
 </PreferenceScreen>
