--- a/presentation/src/main/res/layout/article_creation_fragment.xml
+++ b/presentation/src/main/res/layout/article_creation_fragment.xml
@@ -34,6 +34,7 @@
                         android:id="@+id/etArticleName"
                         android:layout_width="match_parent"
                         android:hint="@string/naziv_proizvoda"
+                        android:onTextChanged="@{articleCreationViewModel::onArticleNameChanged}"
                         android:layout_height="wrap_content"/>
 
             </com.google.android.material.textfield.TextInputLayout>
@@ -86,6 +87,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="24dp"
+                    android:onClick="@{view -> articleCreationFragment.onCancelClick()}"
                     app:layout_constraintEnd_toStartOf="@+id/btnSave" app:layout_constraintTop_toTopOf="@+id/btnSave"
                     app:layout_constraintBottom_toBottomOf="@+id/btnSave"/>
 
