--- a/presentation/src/main/res/layout/article_creation_fragment.xml
+++ b/presentation/src/main/res/layout/article_creation_fragment.xml
@@ -52,7 +52,7 @@
                     android:id="@+id/spinnerQuantity"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:entries="@array/array_kolicina"
+                    android:entries="@array/quantity_array"
                     android:textAlignment="textStart"
                     android:paddingTop="8dp"
                     android:paddingBottom="8dp"
@@ -93,6 +93,7 @@
 
             <com.google.android.material.button.MaterialButton
                     android:id="@+id/btnSave"
+                    android:enabled="false"
                     android:text="@string/spremi"
                     android:layout_width="wrap_content"
                     android:onClick="@{view -> articleCreationFragment.onSaveClick()}"
